nextest-runner/src/reporter/displayer/snapshots/nextest_runner__reporter__displayer__unit_output__tests__replay_neither_captured.snap
---
source: nextest-runner/src/reporter/displayer/unit_output.rs
expression: buf
---
    (output not captured)
