nextest-runner/src/reporter/displayer/snapshots/nextest_runner__reporter__displayer__unit_output__tests__replay_stdout_not_captured.snap
---
source: nextest-runner/src/reporter/displayer/unit_output.rs
expression: buf
---
    (stdout not captured)
--- STDERR ---
    stderr output
